--- a/xponent.html
+++ b/xponent.html
@@ -1,33 +1,370 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xponent Funds</title>
     <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <!-- Starting of Navbar -->
-     <header>
-        <div class="navbar">
-                <div class="navlogo">
-                    <a href=""><img src="./Images/Picsart_22-04-27_23-26-50-772-removebg.png" alt="Logo"></a>
-                </div>
-                <div class="nav-items">
-                    <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Webinars</a></li>
-                        <li><a href="">Retirement</a></li>
-                        <li><a href="">Courses</a></li>
-                        <li><a href="">Calculators</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">More</a></li>
-                    </ul>
-                </div>
-                <div class="login-button">
-                    <a href=""><button>Login</button></a>
-                </div>
+    <!-- Starting of Top-Nav -->
+
+    <div class="top-nav">
+        <div class="nav-item-1">
+            <p style="color: #ffffff;">Customer Support Time: Mon to Sunday 9:00am to 9:00pm</p>
         </div>
-     </header>
+        <div class="nav-item-2">
+            <a href="">
+                <i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i>
+            </a>
+            <a href="">
+                <i class="fa-brands fa-linkedin fa-xl" style="color: #ffffff;"></i>
+            </a>
+            <a href="">
+                <i class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i>
+            </a>
+            <i class="fa-solid fa-grip-lines-vertical fa-xl" style="color: #ffffff;"></i>
+            <a href="tel:+91 11 6929 0876">
+                <p class="underline">Contact us: +91 11 6929 0876 </p>
+            </a>
+        </div>
+    </div>
+
+    <!-- Starting of Navbar -->
+    <header>
+        <div class="navbar">
+            <div class="navlogo">
+                <a href="">
+                    <img src="./Images/Xponent.png " alt="Logo">
+                </a>
+            </div>
+            <div class="nav-items">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Webinars</a></li>
+                    <li><a href="">Retirement</a></li>
+                    <li><a href="">Courses</a></li>
+                    <li><a href="">Calculators</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">More</a></li>
+                </ul>
+            </div>
+            <div class="login-button">
+                <a href=""><button class="login">Login</button></a>
+            </div>
+        </div>
+    </header>
+    <!-- Ending of navbar -->
+
+    <!-- Intro Section -->
+
+    <section>
+        <div class="intro">
+            <div class="intro-logo">
+                <img src="./Images/Xponent.png" alt="Logo">
+            </div>
+
+            <div class="intro-text">
+                <h1 style="color: #2c48a9;">
+                    <span class="line">Let us help you</span>
+                    <span class="line">secure your future</span>
+
+                </h1>
+
+                <p style="color: #747988;">We Make Your Vision Our Goal.</p>
+                <p>
+                    <span class="line-1 ">Get personalised financial advice to help you achieve</span>
+                    <span class="line-1">the financial goals you envision.</span>
+                </p>
+                <div class="button">
+                    <a href=""> <button class="button-1">Connect Now</button></a>
+                    <a href=""> <button class="button-2">Explore More</button></a>
+                </div>
+            </div>
+    </section>
+
+    <!-- Ending of Intro Section -->
+
+    <!-- 4 Boxes -->
+    <div class="boxes">
+        <div class="container">
+            <div class="box-1">
+                <h2>
+                    <span class="line-1">1200+</span>
+                    <span class="line-1" style="font-size: 16px;">Number of live classes done</span>
+                </h2>
+            </div>
+            <div class="box-2">
+                <h2>
+                    <span class="line-2">200+</span>
+                    <span class="line-2" style="font-size: 16px;">Number of students enrolled</span>
+                </h2>
+            </div>
+            <div class="box-3">
+                <h2>
+                    <span class="line-3">5+</span>
+                    <span class="line-3" style="font-size: 16px;">Years of experience</span>
+                </h2>
+            </div>
+            <div class="box-4">
+                <h2>
+                    <span class="line-4">10+</span>
+                    <span class="line-4" style="font-size: 16px;">Internship offers after course completetion</span>
+                </h2>
+            </div>
+        </div>
+    </div>
+
+    <!-- End of 4 Boxes -->
+
+    <!-- Starting of Courses Banner -->
+
+    <section>
+        <div class="courses-banner">
+            <div class="container">
+                <div class="info">
+                    <h2>
+                        Grow Your Knowledge With Xponent Funds.
+                    </h2>
+                    <p>
+                        Enroll yourself with our end stock market-related course and take your career in the stock
+                        market to the next level.
+                    </p>
+                    <p>
+                        With our 10+ years of experienced teachers, you will be getting the best learning experience
+                        ever.
+                    </p>
+                    <a href=""><button>Explore Our Courses</button></a>
+                </div>
+                <div class="banner">
+                    <img src="./Images/DuoFinal_3.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Ending of Couses Banner -->
+
+    <!-- Starting of Welcome Section -->
+
+    <section>
+        <div class="welcome">
+            <div class="container" style="text-align: center;">
+                <h2 style="text-align: center;">
+                    Welcome To Xponent Funds
+                </h2>
+                <p>
+                    Xponent is a financial consultant company providing financial consultancy services from 2
+                    consecutive years. At Xponent Funds we pioneered the financial advisory model in India, believing
+                    that technology should not replace financial advisors but empower them. We strongly believe that the
+                    human touch along with dedicated technical support are critical to teach you how to achieve your
+                    long-term financial goals.
+                </p>
+                <p>
+                    After following the personal financial planning process, all your investments through Xponent Funds
+                    will be linked to clearly defined goals. We will play the role of your behavioral coach, and help
+                    save you from investing decisions based on greed and fear.
+                </p>
+                <p>
+                    Your experience with us will be seamless, convenient, and paperless. You will have the best tools to
+                    manage your progress towards your goals and ensure a best-in-class investment plan, that is why
+                    xponent is known as one of the best financial advisor planner.
+                </p>
+                <a href="" style="text-align: center;"><button>Know More About US</button></a>
+                <img src="./Images/Squad.jpg" alt="Team" style="margin-bottom: 3%; width:100%; height: auto;">
+            </div>
+        </div>
+    </section>
+
+    <!-- Ending of Welcome Section -->
+
+    <!-- Starting of Differ-Us Section -->
+
+    <section>
+        <div class="differ-us">
+            <div class="container-1">
+                <h2 style="text-align: center; margin-bottom: 5%;">
+                    What differs us from others?
+                </h2>
+                <div class="container-2">
+                    <div class="box">
+                        <i class="fa-regular fa-lightbulb icon" style="margin-bottom: 3%;"></i>
+                        <p>
+                            Unlike other AMCs, Xponent executes its analytical and investment program with a hybrid
+                            human-computer approach. We've developed, tested, and deployed numerous computer-oriented
+                            algorithms to speculate market trends more precisely. We have one of the most efficient and
+                            intellectual analytics teams working 24x7 to ensure the consideration of almost every market
+                            moving factor.
+                        </p>
+                    </div>
+                    <div class="box">
+                        <i class="fa-solid fa-message icon" style="margin-bottom: 3%;"></i>
+                        <p>
+                            At Xponent, we don't work with pre-fixed investment schemes. Instead, we provide complete
+                            flexibility in offering our customers according to their own needs. We assess and analyze
+                            each customer's investment and risk-taking capacity individually and thus provide our
+                            customers with specially customised investment plans.
+                        </p>
+                    </div>
+                    <div class="box">
+                        <i class="fa-solid fa-book-open icon" style="margin-bottom: 3%;"></i>
+                        <p>
+                            Xponent is committed and obligated to abide by the contract signed between Xponent and our
+                            customer before the advisory. We never fail to satisfy what had been promised to our
+                            customers. We have a 24x7 support team with a 1-hour response time at the longest.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Ending of Differ Us Section -->
+
+
+
+    <!-- Starting of Embedded Video -->
+
+    <section>
+        <div class="video">
+            <div class="container-1">
+                <h2 style="text-align: center;">
+                    How Xponent is going to help you
+                </h2>
+                <p style="text-align: center;">
+                    Through this video, you can easily understand how our services and courses are going to help you
+                </p>
+            </div>
+            <div class="container-2">
+                <iframe style="margin-bottom: 5% ;aspect-ratio: 16/9; width: 100%;"
+                    src="https://www.youtube.com/embed/GIfQkizoUX0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a href=""><button>Visit Our Channel</button></a>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- Ending of Embedded Video -->
+
+    <!-- Starting of Services Section -->
+
+
+    <section>
+        <div class="services">
+            <div class="container-1">
+                <h2 style="text-align: center;">
+                    What We Offer You.
+                </h2>
+                <p style="text-align: center;">
+                    Discover the Full Range of Services and Resources Available to You from Xponent Funds. From Expert
+                    Investment Advice and Personalized Portfolio Management to Cutting-Edge Tools and Educational
+                    Resources, We Have Everything You Need to Succeed in the Indian Stock Market. Whether You're Just
+                    Getting Started or Looking to Take Your Trading to the Next Level, Xponent Funds Offers You the
+                    Comprehensive Support and Guidance You Need to Achieve Your Financial Goals.
+                </p>
+            </div>
+            <div class="container-2">
+                <div class="box">
+                    <img src="./Images/services/Image-1.png" alt="">
+                    <a href="">
+                        <p style="text-align: center;">SIP Calculator</p>
+                    </a>
+                </div>
+                <div class="box">
+                    <img src="./Images/services/Image-2.png" alt="">
+                    <a href="">
+                        <p style="text-align: center;">Retirement Planning Advisory</p>
+                    </a>
+                </div>
+                <div class="box">
+                    <img src="./Images/services/Image-3.png" alt="">
+                    <a href="">
+                        <p style="text-align: center;">Courses</p>
+                    </a>
+                </div>
+                <div class="box">
+                    <img src="./Images/services/Image-4.png" alt="">
+
+                    <a href="">
+                        <p style="text-align: center;">Mutual Funds Advisory</p>
+                    </a>
+                </div>
+                <div class="box">
+                    <img src="./Images/services/Image-5.png" alt="">
+                    <a href="">
+                        <p style="text-align: center; ">MIS Advisory</p>
+                    </a>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- Ending of Services Section -->
+
+
+    <!-- Starting of Process Section -->
+
+    <section>
+        <div class="process">
+            <h2 style="text-align: center;padding-top: 5%; padding-bottom: 5%;">Our Process</h2>
+            <div class="container-1">
+                <div id="photo">
+                    <img src="./Images/process/image1.jpg" alt="">
+                </div>
+                <div id="number">
+                    <img style="margin-bottom: 5%;" src="./Images/numeric/01 image.png" alt="">
+                    <div class="three-boxes">
+                        <h3 style="text-align: center;">Client Information</h3>
+                        <p style="text-align: center;">The client must fill out the information form by providing all
+                            the credentials, including some
+                            basic information and financial goals.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="container-2">
+
+                <div id="number">
+                    <img style="margin-bottom: 5%;" src="./Images/numeric/02 image.png" alt="">
+                    <div class="three-boxes">
+                        <h3 style="text-align: center;">Meeting and Discussion</h3>
+                        <p style="text-align: center;">After we receive the form, we schedule a meeting with the client
+                            to
+                            understand the client's financial situation, goals and objectives. </p>
+                    </div>
+                </div>
+                <div id="photo">
+                    <img src="./Images/process/image2.png" alt="">
+                </div>
+            </div>
+            <div class="container-1">
+                <div id="photo">
+                    <img src="./Images/process/image3.png" alt="">
+
+                </div>
+                <div id="number">
+                    <img style="margin-bottom: 5%;" src="./Images/numeric/03 image.png" alt="">
+                    <div class="three-boxes">
+                        <h3 style="text-align: center;">Develop an Investment Plan</h3>
+                        <p style="text-align: center;">Once we understand our clients' position, we render professional financial advisory through our best-abled team of financial advisors.
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
